--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -1,30 +1,31 @@
 <!doctype html>
-<html lang="en" ng-app="NarrowItDownApp">
-
-<head>
+<html ng-app="NarrowItDownApp" lang="en">
+  <head>
     <title>Narrow Down Your Menu Choice</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script type="text/javascript" src="angular.min.js"></script>
-    <script type="text/javascript" src="app.js"></script>
     <link rel="stylesheet" href="styles/bootstrap.min.css">
     <link rel="stylesheet" href="styles/styles.css">
-</head>
-
+    <script src="angular.min.js"></script>
+    <script src="app.js"></script>
+  </head>
 <body>
-    <div class="container">
-        <h1>Narrow Down Your Chinese Menu Choice</h1>
-        <div ng-controller="NarrowItDownController as narrowIt">
-            <div class="form-group">
-                <input type="text" placeholder="search term" class="form-control" ng-model="narrowIt.search">
-            </div>
-            <div class="form-group narrow-button">
-                <button class="btn btn-primary" ng-click="narrowIt.narrowItDown();">Narrow It Down For Me!</button>
-            </div>
-            <div class="clearfix"></div>
-            <found-items items="narrowIt.found" on-remove="narrowIt.removeItem(i)"></found-items>
-        </div>
+   <div class="container" >
+    <h1>Narrow Down Your Chinese Menu Choice</h1>
+
+    <div ng-controller="NarrowItDownController as nidc" >
+
+    <div class="form-group">
+      <input type="text" placeholder="search term" class="form-control" ng-model='nidc.search'>
+    </div>
+    <div class="form-group narrow-button">
+      <button class="btn btn-primary" ng-click="nidc.narrow()">Narrow It Down For Me!</button>
     </div>
 
-</body>
+    <div class='clearfix'></div>
+    <found-items items="nidc.found" on-remove="nidc.removeItem(i)"></found-items>
 
+    </div>
+  </div>
+
+</body>
 </html>
