--- a/module4-solution/index.html
+++ b/module4-solution/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/styles.css">
-    <title>Menu App</title>
+    <title>Module 4</title>
   </head>
   <body>
-    <h1>Restaurant App</h1>
+    <h1>Welcome!!!!</h1>
 
     <ui-view></ui-view>
 
@@ -16,12 +16,12 @@
 
 
     <!-- Modules -->
-    <script src="src/menuapp/menuapp.module.js"></script> 
-	<script src="src/menuapp/data.module.js"></script> 
+    <script src="src/menuapp/menuapp.module.js"></script>
+	<script src="src/menuapp/data.module.js"></script>
 
     <!-- Routes -->
 	<script src="src/routes.js"></script>
-	
+
  
     <script src="src/menuapp/categories.component.js"></script>
     <script src="src/menuapp/items.component.js"></script>
@@ -33,6 +33,6 @@
     <script src="src/menuapp/item-detail.controller.js"></script>
 
 
-	
+
   </body>
 </html>
